--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,5 +1,16 @@
 before_script:
   - RAILS_ENV=test bundle exec rake db:schema:load
 rvm: true
-script:
-  - xvfb-run bundle exec rspec
+builds:
+  build_1:
+    environment:
+      RUBY_VERSION: 2.7.5
+    name: Ruby 2.7.5
+    script:
+      - xvfb-run bundle exec rspec
+  build_2:
+    environment:
+      RUBY_VERSION: 3.0.3
+    name: Ruby 3.0.3
+    script:
+      - xvfb-run bundle exec rspec
